# kannweg_3d

./: .gitignore  Cargo.toml
assets/: air_vent.fbx  corridor.fbx  environment.dds  floor.fbx  items.fbx  oxygen.fbx  wall.fbx  wall_inner_corner.fbx  wall_outer_corner.fbx
src/: level_generator.rs  main.rs  player.rs  sound.rs
